information on changes since the last release of the package, as well as a
running list of high-level changes from previous versions.  If critical bugs
are found in any of the software, notice of such bugs and the versions in
which they were fixed will be noted here, as well.

-----------------------------------------------------------------------

* ads-github-tools 0.3.6 (TBD)

** fixes

   (None)


** improvements

   (None)


* ads-github-tools 0.3.5 (2022-10-26)

** fixes

*** issue #85: "cache: serialize data emit"

    https://github.com/salewski/ads-github-tools/issues/85

    The concurrency features added to the 'ads-github-cache' tool in the
    ads-github-tools-0.3.4 release (see issues #80 and #81) inadvertently
    broke some operations that emitted cached data. Data was not only
    concurrently fetched for updating the cache, but was sometimes emitted
    concurrently, as well, causing the output to be garbled (mainly in the
    form of JSON that was no longer well-formed due to being intermixed from
    multiple emitting background processes). This has been fixed. The data is
    still fetched concurrently (from the upstream GitHub v3 API endpoints),
    but emitting the data from cached objects now happens sequentially as one
    would expect. This is mainly relevant for paths that represent "paged
    collections", where multiple pages of data are available.


** improvements

*** issue #84: "doc: HACKING: update to reflect use of newer versions of the GNU Autotools"

    https://github.com/salewski/ads-github-tools/issues/84

    The 'HACKING' file has been updated to reflect the versions of the GNU
    Autotools currently being used for the 'ads-github-tools' project. All
    developers working on the project need to be using the same versions of
    the Autotools programs in the toolchain. Currently (as of 2022-10), those
    versions are:

        automake 1.16.3
        autoconf 2.69
